# avogadro

./: CMakeLists.txt
libavogadro/src/: glwidget.cpp
libavogadro/src/extensions/: CMakeLists.txt
libavogadro/src/extensions/qespresso/: CMakeLists.txt  EspressoExtension.cbp  Makefile  espressoextension.avo  espressoextension.cpp  espressoextension.h  espressoextension.mf  espressopwscfconfig.cpp  espressopwscfconfig.h  espressopwscfdialog.cpp  espressopwscfdialog.h  install_manifest.txt
libavogadro/src/extensions/qespresso/esc/: cell.desc  confextract.lua  control.desc  electrons.desc  ions.desc  system.desc
